03-kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: myapp-namespace
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapp-namespace
  name: myapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: avdeevaml/cloud:v1
        ports:
        - containerPort: 8000
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8000
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: mysecret
