03-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: myapp-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: web-server
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 8000
